fix: prevent border from appearing on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@ html {
     opacity: 1;
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
+
+@media only screen and (max-width: 1024px) {
+    .cursor-dot-outline {
+        border: 0px;
+    }
+}
